# adelaide-api

./: README.md  makefile  pyproject.toml
src/adelaide_api/: __init__.py  cache.py  fetch.py  model.py  setup.py
src/adelaide_api/resources/: CAMPUS.json  CSP_ACAD_CAREER.json  SUBJECT.json  TERM.json
tests/: test_fetch.py
